# instruction-bounded-inference-artifact

./: CITATION.cff  CLAIMS-EVIDENCE-MATRIX.md  CURRENT.md  LICENSE  LICENSE-DATA  README.md  REPRODUCE.md
artifact/: README.md
artifact/data/: README.md  models.csv  quality_audit.csv
artifact/data/kernel/: matmul_bench.csv
artifact/data/onchain/: icp_mainnet.csv  local.csv  ssn_mainnet.csv
artifact/data/paper_1_5/: README.md  c2-ppl-smollm135-only.csv  imatrix_manifest.csv  (+8 more)
artifact/mteb/: README.md  audit_set.json
artifact/native-baseline/: CMakeLists.txt  bench.cpp  results.csv
artifact/notes/: alpha_exec_convention.md  beta_derivation.md  blockchain_ai_execution_boundaries.md  paper1_long_measurement_inventory.md  source_pinning.md
artifact/results/: CHATGPT-VERIFICATION-PACKAGE.md  INDEPENDENT-VERIFICATION-PACKAGE.md  README.md  logs  summary  summary_baseline  summary_v2
artifact/scripts/: analyze_kernels.py  analyze_scaling_law.py  apply_variance_updates.py  benchmark_repeated_runs.sh  check_paper_readiness.py  compute_alpha_exec.py  find_discrepancies.py  rebuild_data_tables.py  registry_utils.py  run_coherence.py  run_mteb_fra.py  run_variance.py  validate_data_tables.py  verify_gguf_metadata.py
drafts/: instruction-bounded-inference.md  paper-v14-short.md
exports/: instruction-bounded-inference.html  paper-pdf.css  paper-v14-short.html
results/: rebench_2026-05-19.md
scripts/: run_bench.sh
source/: LICENSE  README.md
source/llama_cpp_canister/: .gitignore  benchmark_results_20260416_113427.csv  canister_ids.json  dfx.json  icpp.toml
(+154 files in other folders)
